<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.vineeta.clubnotes.View.RegisterActivity">
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/name"
        android:hint="@string/name"
        android:inputType="textPersonName"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/location"
        android:hint="@string/location"
        android:inputType="text"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/mobile"
        android:hint="@string/mobile_number"
        android:inputType="number"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/institute"
        android:hint="@string/institute"
        android:inputType="text"/>
    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:background="#E57373"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"/>
</LinearLayout>
