<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.vineeta.clubnotes.View.TextOldActivity"
    android:orientation="vertical">
    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_folder_name"
        android:id="@+id/fname"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note_title"
        android:id="@+id/note"/>
    <Button
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="italic|bold"
        android:background="#66BB6A"
        android:id="@+id/btnclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="click"/>
</LinearLayout>
