<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vineeta.clubnotes.View.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/blogin"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#E57373"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textStyle="bold|italic"
            android:typeface="normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="12sp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible" />
        <Button
            android:id="@+id/register"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textStyle="italic|bold"
            android:onClick="register"
            android:background="#66BB6A" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
