<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.vineeta.clubnotes.View.AudioActivity">
    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_folder_name"
        android:id="@+id/folder"/>
    <Button
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:background="#E57373"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:onClick="submit"/>

    <Button
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:id="@+id/click"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="italic|bold"
        android:background="#66BB6A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/next"
        android:onClick="click"/>
</LinearLayout>
